--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ui-kit-boilerplate",
+  "name": "aulasoftwarelibre-cuestion-ui-kit",
   "version": "1.0.0",
   "description": "A React UI Kit boilerplate with Styled Components, Typescript and Jest",
   "main": "index.js",
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/leandrooriente/react-ui-kit-boilerplate.git"
+    "url": "git+https://github.com/aulasoftwarelibre/cuestion-ui-kit.git"
   },
   "keywords": [
     "jest",
@@ -28,12 +28,12 @@
     "boilerplate",
     "storybook"
   ],
-  "author": "Leandro Oriente <leandroriente@gmail.com>",
-  "license": "MIT",
+  "author": "Aula de Software Libre <aulasoftwarelibre@uco.es>",
+  "license": "GPL3",
   "bugs": {
-    "url": "https://github.com/leandrooriente/react-ui-kit-boilerplate/issues"
+    "url": "https://github.com/aulasoftwarelibre/cuestion-ui-kit/issues"
   },
-  "homepage": "https://github.com/leandrooriente/react-ui-kit-boilerplate#readme",
+  "homepage": "https://github.com/aulasoftwarelibre/cuestion-ui-kit#readme",
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
@@ -45,6 +45,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "@storybook/addon-actions": "^5.1.9",
     "@storybook/addon-info": "^5.1.9",
     "@storybook/addon-knobs": "^5.1.9",
@@ -65,6 +67,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.0",
     "cache-loader": "^4.0.1",
+    "clsx": "^1.0.4",
     "husky": "^1.0.0-rc.15",
     "jest": "^23.6.0",
     "jest-styled-components": "^6.2.1",
