--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aulasoftwarelibre-cuestion-ui-kit",
   "version": "1.0.0",
-  "description": "A React UI Kit boilerplate with Styled Components, Typescript and Jest",
+  "description": "Cuestion UI Kit",
   "main": "index.js",
   "scripts": {
     "compile": "tsc",
@@ -29,7 +29,7 @@
     "storybook"
   ],
   "author": "Aula de Software Libre <aulasoftwarelibre@uco.es>",
-  "license": "GPL3",
+  "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/aulasoftwarelibre/cuestion-ui-kit/issues"
   },
@@ -55,6 +55,8 @@
     "@storybook/addons": "^5.1.9",
     "@storybook/react": "^5.1.9",
     "@storybook/storybook-deployer": "^2.3.0",
+    "@types/enzyme": "^3.9.4",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^23.3.2",
     "@types/react-dom": "^16.0.7",
     "@types/react-test-renderer": "^16.0.2",
@@ -68,6 +70,8 @@
     "babel-loader": "^8.0.0",
     "cache-loader": "^4.0.1",
     "clsx": "^1.0.4",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "husky": "^1.0.0-rc.15",
     "jest": "^23.6.0",
     "jest-styled-components": "^6.2.1",
