--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^23.3.2",
     "@types/react-dom": "^16.0.7",
+    "@types/react-intl": "2.3.17",
     "@types/react-test-renderer": "^16.0.2",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-info": "^4.1.2",
@@ -77,7 +78,9 @@
     "jest-styled-components": "^6.2.1",
     "plop": "^2.1.0",
     "react-docgen-typescript-loader": "^3.0.0",
+    "react-intl": "2.8.0",
     "react-test-renderer": "^16.5.2",
+    "storybook-addon-intl": "^2.4.1",
     "ts-jest": "^23.10.1",
     "ts-loader": "^5.1.1",
     "tslint": "^5.11.0",
