--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@storybook/storybook-deployer": "^2.3.0",
     "@types/enzyme": "^3.9.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@types/faker": "^4.1.5",
     "@types/jest": "^24.0.15",
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.17",
@@ -75,6 +76,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-react-intl": "^2.0.4",
+    "faker": "^4.1.0",
     "husky": "^1.0.0-rc.15",
     "jest": "^24.8.0",
     "jest-styled-components": "^6.2.1",
