Create a TalkItem component (#3)
* Added TalkItem component and tests
* Extract mock data from stories
* Added travis 
* Set test timezone as UTC
* Added faker

--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "@storybook/storybook-deployer": "^2.3.0",
     "@types/enzyme": "^3.9.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/jest": "^24.0.0",
+    "@types/faker": "^4.1.5",
+    "@types/jest": "^24.0.15",
     "@types/react-dom": "^16.0.7",
     "@types/react-intl": "^2.3.17",
     "@types/react-test-renderer": "^16.0.2",
@@ -75,8 +76,9 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-react-intl": "^2.0.4",
+    "faker": "^4.1.0",
     "husky": "^1.0.0-rc.15",
-    "jest": "^23.6.0",
+    "jest": "^24.8.0",
     "jest-styled-components": "^6.2.1",
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
@@ -84,7 +86,7 @@
     "react-docgen-typescript-loader": "^3.0.0",
     "react-test-renderer": "^16.5.2",
     "storybook-addon-intl": "^2.4.1",
-    "ts-jest": "^23.10.1",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.0",
     "tslint": "^5.11.0",
     "tslint-react": "^4.0.0",
