--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "aulasoftwarelibre-cuestion-ui-kit",
   "version": "1.0.0",
   "description": "Cuestion UI Kit",
-  "main": "index.js",
+  "main": "build/lib/index.js",
+  "types": "build/lib/index.d.ts",
   "scripts": {
     "compile": "tsc",
     "test": "jest",
@@ -49,6 +50,7 @@
     "styled-components": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
     "@babel/core": "^7.1.0",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
