--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@types/jest": "^24.0.15",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-intl": "^2.3.18",
+    "@types/styled-components": "^4.1.18",
     "husky": "^3.0.1",
+    "jest": "^24.8.0",
+    "jest-styled-components": "^6.3.3",
+    "jsdom": "^15.1.1",
+    "jsdom-global": "^3.0.2",
     "lerna": "^3.16.4",
+    "prettier": "^1.18.2",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-intl": "^2.9.0",
+    "styled-components": "^4.3.2",
+    "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0"
+    "tslint-react": "^4.0.0",
+    "typescript": "^3.5.3"
   },
   "husky": {
     "hooks": {
@@ -21,8 +39,10 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
     "prettier": "prettier --write --config ./.prettierrc 'packages/*/src/**/*.{ts,tsx}'",
+    "test": "jest",
     "tslint": "tslint 'packages/*/src/**/*.{ts,tsx}'",
     "tslint:fix": "yarn run tslint --fix",
-    "storybook": "yarn workspace @cuestion/ui storybook"
+    "storybook": "yarn workspace @cuestion/ui storybook",
+    "storybook-deploy": "yarn workspace @cuestion/ui storybook-to-ghpages"
   }
 }
