--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,20 +6,9 @@
   "types": "build/lib/index.d.ts",
   "scripts": {
     "compile": "tsc",
-    "test": "jest",
-    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
-    "tslint": "tslint './src/**/*.{ts,tsx}'",
-    "tslint:fix": "yarn run tslint --fix",
-    "tslint:check": "tslint-config-prettier-check ./tslint.json",
-    "prettier": "prettier --write --config ./.prettierrc './src/**/*.{ts,tsx}'",
     "deploy-storybook": "storybook-to-ghpages",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "yarn run lint && yarn test"
-    }
   },
   "repository": {
     "type": "git",
@@ -38,19 +27,7 @@
     "url": "https://github.com/aulasoftwarelibre/cuestion-ui-kit/issues"
   },
   "homepage": "https://github.com/aulasoftwarelibre/cuestion-ui-kit#readme",
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-intl": "^2.8.0",
-    "styled-components": "^4.2.0"
-  },
-  "peerDependencies": {
-    "react": "^16.5.2",
-    "styled-components": "^4.0.2"
-  },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.1.0",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
     "@storybook/addon-actions": "^5.1.9",
@@ -64,16 +41,12 @@
     "@types/enzyme": "^3.9.4",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/faker": "^4.1.5",
-    "@types/jest": "^24.0.15",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-intl": "^2.3.17",
     "@types/react-test-renderer": "^16.0.2",
     "@types/storybook__addon-actions": "^3.4.1",
     "@types/storybook__addon-info": "^4.1.2",
     "@types/storybook__addon-knobs": "^5.0.1",
     "@types/storybook__addon-options": "^4.0.2",
     "@types/storybook__react": "^4.0.2",
-    "@types/styled-components": "^4.0.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.0",
     "cache-loader": "^4.0.1",
@@ -82,21 +55,9 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "enzyme-react-intl": "^2.0.4",
     "faker": "^4.1.0",
-    "husky": "^1.0.0-rc.15",
-    "jest": "^24.8.0",
-    "jest-styled-components": "^6.2.1",
-    "jsdom": "^15.1.1",
-    "jsdom-global": "^3.0.2",
-    "prettier": "^1.18.2",
     "react-docgen-typescript-loader": "^3.0.0",
     "react-test-renderer": "^16.5.2",
     "storybook-addon-intl": "^2.4.1",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
-    "tslint": "^5.18.0",
-    "tslint-config-prettier": "^1.18.0",
-    "tslint-plugin-prettier": "^2.0.1",
-    "tslint-react": "^4.0.0",
-    "typescript": "^3.0.3"
+    "ts-loader": "^6.0.0"
   }
 }
