Migrate to monorepo structure (#16)
* Moved ui to packages directory
* Added demo web client
* Added lerna and yarn workspaces
* Removed plop

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "outDir": "build/lib",
     "module": "commonjs",
     "target": "es5",
     "lib": ["es5", "es6", "es7", "es2017", "dom"],
@@ -8,31 +7,16 @@
     "allowJs": false,
     "jsx": "react",
     "moduleResolution": "node",
-    "rootDirs": ["src", ".storybook"],
-    "baseUrl": "./",
     "forceConsistentCasingInFileNames": true,
-    "noImplicitReturns": true,
-    "noImplicitThis": true,
     "noImplicitAny": false,
-    "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "noUnusedLocals": true,
     "declaration": true,
-    "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
   },
-  "declaration": true,
-  "include": ["src/**/*", ".storybook/**/*"],
+  "include": ["packages"],
   "exclude": [
     "node_modules",
-    "build",
-    "scripts",
-    ".storybook",
-    "src/internal",
-    "src/**/*.test.tsx",
-    "src/**/*.stories.tsx"
   ]
 }
