--- a/package.json
+++ b/package.json
@@ -1,104 +1,52 @@
 {
-  "name": "aulasoftwarelibre-cuestion-ui-kit",
-  "version": "1.0.0",
-  "description": "Cuestion UI Kit",
-  "main": "build/lib/index.js",
-  "types": "build/lib/index.d.ts",
-  "scripts": {
-    "compile": "tsc",
-    "test": "jest",
-    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'",
-    "tslint": "tslint './src/**/*.{ts,tsx}'",
-    "tslint:fix": "yarn run tslint --fix",
-    "tslint:check": "tslint-config-prettier-check ./tslint.json",
-    "prettier": "prettier --write --config ./.prettierrc './src/**/*.{ts,tsx}'",
-    "generate": "plop --plopfile ./.plop/plop.config.js",
-    "deploy-storybook": "storybook-to-ghpages",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "yarn run lint && yarn test"
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aulasoftwarelibre/cuestion-ui-kit.git"
-  },
-  "keywords": [
-    "jest",
-    "react",
-    "typescript",
-    "boilerplate",
-    "storybook"
-  ],
-  "author": "Aula de Software Libre <aulasoftwarelibre@uco.es>",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/aulasoftwarelibre/cuestion-ui-kit/issues"
-  },
-  "homepage": "https://github.com/aulasoftwarelibre/cuestion-ui-kit#readme",
-  "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-intl": "^2.8.0",
-    "styled-components": "^4.2.0"
-  },
-  "peerDependencies": {
-    "react": "^16.5.2",
-    "styled-components": "^4.0.2"
-  },
+  "name": "cuestion",
+  "version": "0.0.1",
+  "private": true,
   "devDependencies": {
     "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.1.0",
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/icons": "^4.2.1",
-    "@storybook/addon-actions": "^5.1.9",
-    "@storybook/addon-info": "^5.1.9",
-    "@storybook/addon-knobs": "^5.1.9",
-    "@storybook/addon-links": "^5.1.9",
-    "@storybook/addon-options": "^5.1.9",
-    "@storybook/addons": "^5.1.9",
-    "@storybook/react": "^5.1.9",
-    "@storybook/storybook-deployer": "^2.3.0",
-    "@types/enzyme": "^3.9.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5",
-    "@types/faker": "^4.1.5",
+    "@babel/core": "^7.5.5",
     "@types/jest": "^24.0.15",
-    "@types/react-dom": "^16.0.7",
-    "@types/react-intl": "^2.3.17",
-    "@types/react-test-renderer": "^16.0.2",
-    "@types/storybook__addon-actions": "^3.4.1",
-    "@types/storybook__addon-info": "^4.1.2",
-    "@types/storybook__addon-knobs": "^5.0.1",
-    "@types/storybook__addon-options": "^4.0.2",
-    "@types/storybook__react": "^4.0.2",
-    "@types/styled-components": "^4.0.1",
-    "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.0",
-    "cache-loader": "^4.0.1",
-    "clsx": "^1.0.4",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "enzyme-react-intl": "^2.0.4",
-    "faker": "^4.1.0",
-    "husky": "^1.0.0-rc.15",
+    "@types/jsdom": "^12.2.4",
+    "@types/react": "^16.8.23",
+    "@types/react-dom": "^16.8.5",
+    "@types/react-intl": "^2.3.18",
+    "@types/styled-components": "^4.1.18",
+    "husky": "^3.0.1",
     "jest": "^24.8.0",
-    "jest-styled-components": "^6.2.1",
+    "jest-styled-components": "^6.3.3",
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
-    "plop": "^2.1.0",
+    "lerna": "^3.16.4",
+    "lint": "^0.7.0",
     "prettier": "^1.18.2",
-    "react-docgen-typescript-loader": "^3.0.0",
-    "react-test-renderer": "^16.5.2",
-    "storybook-addon-intl": "^2.4.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-intl": "^2.9.0",
+    "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.0",
     "tslint": "^5.18.0",
     "tslint-config-prettier": "^1.18.0",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^4.0.0",
-    "typescript": "^3.0.3"
+    "typescript": "^3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn run tslint && yarn test"
+    }
+  },
+  "workspaces": [
+    "packages/*"
+  ],
+  "scripts": {
+    "bootstrap": "lerna bootstrap --use-workspaces",
+    "build": "lerna run build",
+    "dev": "yarn workspace @cuestion/web dev",
+    "prettier": "prettier --write --config ./.prettierrc 'packages/ui/src/**/*.ts{,x}' 'packages/web/{components,lib,pages}/**/*.ts{,x}'",
+    "test": "jest",
+    "tslint": "tslint 'packages/*/src/**/*.{ts,tsx}'",
+    "tslint:fix": "yarn run tslint --fix",
+    "storybook": "yarn workspace @cuestion/ui storybook",
+    "storybook-deploy": "yarn workspace @cuestion/ui storybook-to-ghpages"
   }
 }
