--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,13 +2,13 @@
   "name": "@cuestion/ui",
   "version": "0.1.0",
   "description": "Cuestion UI Kit",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "directories": {
-    "lib": "lib"
+    "lib": "dist"
   },
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
     "build": "tsc",
@@ -65,5 +65,8 @@
     "react-test-renderer": "^16.5.2",
     "storybook-addon-intl": "^2.4.1",
     "ts-loader": "^6.0.0"
+  },
+  "dependencies": {
+    "@cuestion/common": "^0.1.0"
   }
 }
