--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "lib"
+    "outDir": "dist"
   },
   "include": [
     "./src"
   ],
   "exclude": [
-    "./lib"
+    "./dist"
   ]
 }
