Changed test search files blob

--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "dev": "yarn workspace @cuestion/web dev",
     "prettier": "prettier --write --config ./.prettierrc 'packages/ui/src/**/*.ts{,x}' 'packages/web/{components,lib,pages}/**/*.ts{,x}'",
     "test": "jest",
-    "tslint": "tslint 'packages/*/src/**/*.{ts,tsx}'",
+    "tslint": "tslint -e 'packages/**/dist/**' 'packages/**/*.{ts,tsx}'",
     "tslint:fix": "yarn run tslint --fix",
     "start": "yarn workspace @cuestion/web start",
     "storybook": "yarn workspace @cuestion/ui storybook",
