--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "build:common": "lerna run build --scope @cuestion/common",
     "build:ui": "lerna run build --scope @cuestion/ui",
     "dev": "yarn workspace @cuestion/web dev",
+    "mock:api": "yarn workspace @cuestion/server mock:api",
     "prettier": "prettier --write --config ./.prettierrc 'packages/ui/src/**/*.ts{,x}' 'packages/web/{components,lib,pages}/**/*.ts{,x}'",
     "test": "jest",
     "tslint": "tslint -e 'packages/**/dist/**' 'packages/**/*.{ts,tsx}'",
