--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,8 +16,11 @@
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/react-redux": "^7.1.1",
     "@types/redux-saga": "^0.10.5",
+    "axios": "^0.19.0",
+    "dotenv-load": "^2.0.0",
     "intl": "^1.2.5",
     "next": "^9.0.2",
+    "next-env": "^1.1.0",
     "next-redux-saga": "^4.0.2",
     "next-redux-wrapper": "^3.0.0-alpha.3",
     "next-seo": "^2.0.0",
