--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,6 +12,7 @@
     "@cuestion/ui": "^0.1.0",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "@types/axios": "^0.14.0",
     "@types/next-redux-saga": "^3.0.1",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/react-redux": "^7.1.1",
