--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
   "scripts": {
     "bootstrap": "lerna bootstrap --use-workspaces",
     "build": "lerna run build",
+    "prebuild:common": "lerna run build --scope @cuestion/ui",
     "build:common": "lerna run build --scope @cuestion/common",
     "build:ui": "lerna run build --scope @cuestion/ui",
+    "predev": "lerna run build --scope @cuestion/common --scope @cuestion/ui",
     "dev": "yarn workspace @cuestion/web dev",
     "mock:api": "yarn workspace @cuestion/server mock:api",
     "prettier": "prettier --write --config ./.prettierrc 'packages/ui/src/**/*.ts{,x}' 'packages/web/{components,lib,pages}/**/*.ts{,x}'",
