--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
+    "redux-saga-test-plan": "^4.0.0-beta.2",
     "styled-components": "^4.3.2",
     "ts-jest": "^24.0.2",
     "tslint": "^5.18.0",
