--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 sudo: false
 language: node_js
 node_js:
-- '8'
+  - "8"
 cache:
   yarn: true
   directories:
-  - node_modules
+    - node_modules
 install:
-- yarn install
-- yarn build
+  - yarn install
+  - yarn build:test
 script:
-- yarn tslint
-- yarn test
+  - yarn tslint
+  - yarn test
