--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,13 +12,27 @@
     "@cuestion/ui": "^0.1.0",
     "@material-ui/core": "^4.1.3",
     "@material-ui/icons": "^4.2.1",
+    "@types/axios": "^0.14.0",
+    "@types/next-redux-saga": "^3.0.1",
+    "@types/next-redux-wrapper": "^2.0.2",
+    "@types/react-redux": "^7.1.1",
+    "@types/redux-saga": "^0.10.5",
+    "axios": "^0.19.0",
+    "dotenv-load": "^2.0.0",
     "intl": "^1.2.5",
     "next": "^9.0.2",
+    "next-env": "^1.1.0",
+    "next-redux-saga": "^4.0.2",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
     "next-seo": "^2.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-intl": "^2.9.0",
     "react-particles-js": "^2.7.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.0.5",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
