--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-    "tabWidth": 2,
-    "printWidth": 120
+  "jsxBracketSameLine": true,
+  "printWidth": 80,
+  "semi": true,
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
+
