--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,6 +20,7 @@
     "axios": "^0.19.0",
     "dotenv-load": "^2.0.0",
     "intl": "^1.2.5",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.2",
     "next-env": "^1.1.0",
     "next-redux-saga": "^4.0.2",
@@ -32,8 +33,7 @@
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.5",
-    "styled-components": "^4.2.0"
+    "redux-saga": "^1.0.5"
   },
   "devDependencies": {
     "@types/node": "^12.6.8",
