--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "dependencies": {
     "@types/json-server": "^0.14.0",
-    "json-server": "^0.15.0"
+    "json-server": "^0.15.0",
+    "moment": "^2.24.0"
   },
   "scripts": {
     "mock:api": "json-server --watch api/db.js --routes api/routes.json --port 4000"
