[ui] Changed session type location from web to ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,10 +13,8 @@
     "experimentalDecorators": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": true
   },
   "include": ["packages"],
-  "exclude": [
-    "node_modules",
-  ]
+  "exclude": ["node_modules"]
 }
