Added agenda pages

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,8 @@
     "moment": "^2.24.0"
   },
   "scripts": {
-    "mock:api": "json-server --watch api/db.js --routes api/routes.json --port 4000"
+    "mock:api": "json-server --watch api/db.js --routes api/routes.json --port 4000",
+    "prod:api": "json-server --watch api/db.json --routes api/routes.json --ro --port 4000"
   },
   "devDependencies": {
     "faker": "^4.1.0",
