--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "predev": "lerna run build --scope @cuestion/common --scope @cuestion/ui",
     "dev": "yarn workspace @cuestion/web dev",
     "mock:api": "yarn workspace @cuestion/server mock:api",
+    "prod:api": "yarn workspace @cuestion/server prod:api",
     "prettier": "prettier --write --config ./.prettierrc 'packages/ui/src/**/*.ts{,x}' 'packages/web/{components,lib,pages}/**/*.ts{,x}'",
     "test": "jest",
     "tslint": "tslint -e 'packages/**/dist/**' 'packages/**/*.{ts,tsx}'",
